# rlbook

./: .buildinfo  .gitignore  .nojekyll  CNAME  Makefile  README.md  background.html  background.json  bandits.html  bandits.json  bibliography.html  config.json  contextual_bandits.html  control.html  control.json  environment.yml  exploration.html  exploration.json  fitted-dp.html  fitted-dp.json  fitted_dp.html  genindex.html  glossary.tex  graphs.md  imitation-learning.html  imitation-learning.json  imitation_learning.html  index.html  index.json  intro.html  introduction.html  main.bib  main.tex  mdps.html  mdps.json  myst.search.json  myst.xref.json  notation.html  objects.inv  pg.html  (+16 more)
0_frontmatter/: frontmatter.tex
1_bandits/: bandits.tex
1_intro/: intro.html
2_bandits/: bandits.html
2_mdps/: mdps.md  mdps.tex
3_control/: control.tex
3_mdps/: mdps.html
4_fitted_dp/: fitted_dp.html
4_pg/: pg.tex
5_challenges/: challenges.tex
5_control/: control.html
5_fitted_dp/: fitted_dp.tex
6_exploration_mdps/: exploration.tex
6_fitted_dp/: fitted_dp.tex
6_pg/: pg.html
_sources/: background.md  bandits.md  control.md  exploration.md  fitted_dp.md  imitation_learning.md  index.md  intro.md  mdps.md  pg.md  planning.md
appendix/: appendix.tex
book/: .gitignore  _config.yml  _macros.tex  _quarto.yml  _toc.yml  abstract.qmd  acknowledgements.qmd  appendix.md  background.qmd  bandits.md  bandits.qmd  challenges.md  conf.py  config.py  contextual_bandits.md  control.md  control.qmd  exploration.md  exploration.qmd  fitted_dp.md  fitted_dp.qmd  index.md  (+23 more)
(+25 files in other folders)
