[project]
name = "rlbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexander Cai", email = "alexandercai@outlook.com" }
]
requires-python = ">=3.11"
dependencies = [
    "gymnasium[box2d]>=1.0.0",
    "jax>=0.4.38",
    "jaxtyping>=0.2.36",
    "jupyter-cache>=1.0.1",
    "jupyter>=1.1.1",
    "latexify-py",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "quarto-cli>=1.6.39",
    "statsmodels>=0.14.4",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "tabulate>=0.9.0",
]

[tool.uv.sources]
latexify-py = { path = "../latexify-py", editable = true }
